chore: fix alignment on post without cover

--- a/assets/scss/components/elements/blog/_single.scss
+++ b/assets/scss/components/elements/blog/_single.scss
@@ -100,6 +100,10 @@
 	flex-wrap: wrap;
 }
 
+.page .nv-post-cover {
+	margin-bottom: 60px;
+}
+
 .nv-post-cover {
 	min-height: var(--height);
 	padding: var(--padding);
